[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "async-smsactivate"
version = "1.5"
authors = [
  { name="Anning", email="anningforchina@gmail.com" }
]
readme = "README.md"
description = "async-smsactivate is an unofficial Python module that provides out-of-the-box functions for using the asynchronous API sms-activate.org"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "aiohttp",
    "requests",
    "aiohttp"
]

[project.urls]
Homepage = "https://github.com/Anning01/async-smsactivate"
Issues = "https://github.com/Anning01/async-smsactivate/issues"